Add policy 5-6 check